app/vmsql/goyacc/y.output

state 0
	$accept: .start_command $end 

	CREATE  shift 9
	INSERT  shift 10
	DELETE  shift 12
	DROP  shift 11
	SELECT  shift 13
	DESCRIBE  shift 14
	.  error

	command  goto 2
	create_statement  goto 3
	insert_statement  goto 4
	drop_statement  goto 5
	delete_statement  goto 6
	select_statement  goto 7
	describe_statement  goto 8
	start_command  goto 1

state 1
	$accept:  start_command.$end 

	$end  accept
	.  error


state 2
	start_command:  command.semicolon_opt 
	semicolon_opt: .    (2)

	';'  shift 16
	.  reduce 2 (src line 110)

	semicolon_opt  goto 15

state 3
	command:  create_statement.    (4)

	.  reduce 4 (src line 114)


state 4
	command:  insert_statement.    (5)

	.  reduce 5 (src line 116)


state 5
	command:  drop_statement.    (6)

	.  reduce 6 (src line 117)


state 6
	command:  delete_statement.    (7)

	.  reduce 7 (src line 118)


state 7
	command:  select_statement.    (8)

	.  reduce 8 (src line 119)


state 8
	command:  describe_statement.    (9)

	.  reduce 9 (src line 120)


state 9
	create_statement:  CREATE.TABLE sql_id '(' table_column_list ')' 
	create_statement:  CREATE.TABLE IF NOT EXISTS sql_id '(' table_column_list ')' 

	TABLE  shift 17
	.  error


state 10
	insert_statement:  INSERT.INTO sql_id VALUES insert_data 
	insert_statement:  INSERT.INTO sql_id '*' VALUES insert_data 
	insert_statement:  INSERT.INTO sql_id '(' sql_id_columns ')' VALUES insert_data 

	INTO  shift 18
	.  error


state 11
	drop_statement:  DROP.TABLE sql_id 

	TABLE  shift 19
	.  error


state 12
	delete_statement:  DELETE.FROM sql_id 
	delete_statement:  DELETE.'*' FROM sql_id 
	delete_statement:  DELETE.FROM sql_id WHERE delete_where_expression 

	'*'  shift 21
	FROM  shift 20
	.  error


state 13
	select_statement:  SELECT.'*' FROM sql_id select_where_expressions group_by_expression order_by_expression limit_expression 
	select_statement:  SELECT.select_item_list FROM sql_id select_where_expressions group_by_expression order_by_expression limit_expression 

	'*'  shift 22
	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 25
	non_reserved_keyword  goto 27
	id_or_var  goto 26
	select_item_list  goto 23
	select_item  goto 24

state 14
	describe_statement:  DESCRIBE.TABLE sql_id 

	TABLE  shift 38
	.  error


state 15
	start_command:  command semicolon_opt.    (1)

	.  reduce 1 (src line 107)


state 16
	semicolon_opt:  ';'.    (3)

	.  reduce 3 (src line 112)


state 17
	create_statement:  CREATE TABLE.sql_id '(' table_column_list ')' 
	create_statement:  CREATE TABLE.IF NOT EXISTS sql_id '(' table_column_list ')' 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	IF  shift 40
	.  error

	sql_id  goto 39
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 18
	insert_statement:  INSERT INTO.sql_id VALUES insert_data 
	insert_statement:  INSERT INTO.sql_id '*' VALUES insert_data 
	insert_statement:  INSERT INTO.sql_id '(' sql_id_columns ')' VALUES insert_data 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 41
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 19
	drop_statement:  DROP TABLE.sql_id 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 42
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 20
	delete_statement:  DELETE FROM.sql_id 
	delete_statement:  DELETE FROM.sql_id WHERE delete_where_expression 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 43
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 21
	delete_statement:  DELETE '*'.FROM sql_id 

	FROM  shift 44
	.  error


state 22
	select_statement:  SELECT '*'.FROM sql_id select_where_expressions group_by_expression order_by_expression limit_expression 

	FROM  shift 45
	.  error


state 23
	select_statement:  SELECT select_item_list.FROM sql_id select_where_expressions group_by_expression order_by_expression limit_expression 
	select_item_list:  select_item_list.',' select_item 

	','  shift 47
	FROM  shift 46
	.  error


state 24
	select_item_list:  select_item.    (79)

	.  reduce 79 (src line 278)


state 25
	select_item:  sql_id.'(' select_item ')' 
	select_item:  sql_id.'(' select_item ',' num_literal ')' 
	select_item:  sql_id.    (83)

	'('  shift 48
	.  reduce 83 (src line 287)


state 26
	sql_id:  id_or_var.    (43)

	.  reduce 43 (src line 196)


state 27
	sql_id:  non_reserved_keyword.    (44)

	.  reduce 44 (src line 198)


state 28
	id_or_var:  ID.    (45)

	.  reduce 45 (src line 200)


state 29
	non_reserved_keyword:  BOOL.    (46)

	.  reduce 46 (src line 203)


state 30
	non_reserved_keyword:  BOOLEAN.    (47)

	.  reduce 47 (src line 205)


state 31
	non_reserved_keyword:  DOUBLE.    (48)

	.  reduce 48 (src line 206)


state 32
	non_reserved_keyword:  STRING_NUM.    (49)

	.  reduce 49 (src line 207)


state 33
	non_reserved_keyword:  INTEGER_NUM.    (50)

	.  reduce 50 (src line 208)


state 34
	non_reserved_keyword:  FLOAT_NUM.    (51)

	.  reduce 51 (src line 209)


state 35
	non_reserved_keyword:  DECIMAL_NUM.    (52)

	.  reduce 52 (src line 210)


state 36
	non_reserved_keyword:  TRUE_NUM.    (53)

	.  reduce 53 (src line 211)


state 37
	non_reserved_keyword:  FALSE_NUM.    (54)

	.  reduce 54 (src line 212)


state 38
	describe_statement:  DESCRIBE TABLE.sql_id 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 49
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 39
	create_statement:  CREATE TABLE sql_id.'(' table_column_list ')' 

	'('  shift 50
	.  error


state 40
	create_statement:  CREATE TABLE IF.NOT EXISTS sql_id '(' table_column_list ')' 

	NOT  shift 51
	.  error


state 41
	insert_statement:  INSERT INTO sql_id.VALUES insert_data 
	insert_statement:  INSERT INTO sql_id.'*' VALUES insert_data 
	insert_statement:  INSERT INTO sql_id.'(' sql_id_columns ')' VALUES insert_data 

	'('  shift 54
	'*'  shift 53
	VALUES  shift 52
	.  error


state 42
	drop_statement:  DROP TABLE sql_id.    (64)

	.  reduce 64 (src line 231)


state 43
	delete_statement:  DELETE FROM sql_id.    (65)
	delete_statement:  DELETE FROM sql_id.WHERE delete_where_expression 

	WHERE  shift 55
	.  reduce 65 (src line 234)


state 44
	delete_statement:  DELETE '*' FROM.sql_id 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 56
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 45
	select_statement:  SELECT '*' FROM.sql_id select_where_expressions group_by_expression order_by_expression limit_expression 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 57
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 46
	select_statement:  SELECT select_item_list FROM.sql_id select_where_expressions group_by_expression order_by_expression limit_expression 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 58
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 47
	select_item_list:  select_item_list ','.select_item 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 25
	non_reserved_keyword  goto 27
	id_or_var  goto 26
	select_item  goto 59

state 48
	select_item:  sql_id '('.select_item ')' 
	select_item:  sql_id '('.select_item ',' num_literal ')' 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 25
	non_reserved_keyword  goto 27
	id_or_var  goto 26
	select_item  goto 60

state 49
	describe_statement:  DESCRIBE TABLE sql_id.    (113)

	.  reduce 113 (src line 341)


state 50
	create_statement:  CREATE TABLE sql_id '('.table_column_list ')' 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	table_column_list  goto 61
	column_definition  goto 62
	sql_id  goto 63
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 51
	create_statement:  CREATE TABLE IF NOT.EXISTS sql_id '(' table_column_list ')' 

	EXISTS  shift 64
	.  error


state 52
	insert_statement:  INSERT INTO sql_id VALUES.insert_data 

	'('  shift 66
	.  error

	insert_data  goto 65

state 53
	insert_statement:  INSERT INTO sql_id '*'.VALUES insert_data 

	VALUES  shift 67
	.  error


state 54
	insert_statement:  INSERT INTO sql_id '('.sql_id_columns ')' VALUES insert_data 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id_columns  goto 68
	sql_id  goto 69
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 55
	delete_statement:  DELETE FROM sql_id WHERE.delete_where_expression 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	delete_where_expression  goto 70
	delete_where_item  goto 71
	sql_id  goto 72
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 56
	delete_statement:  DELETE '*' FROM sql_id.    (66)

	.  reduce 66 (src line 236)


state 57
	select_statement:  SELECT '*' FROM sql_id.select_where_expressions group_by_expression order_by_expression limit_expression 
	select_where_expressions: .    (93)

	WHERE  shift 74
	.  reduce 93 (src line 304)

	select_where_expressions  goto 73

state 58
	select_statement:  SELECT select_item_list FROM sql_id.select_where_expressions group_by_expression order_by_expression limit_expression 
	select_where_expressions: .    (93)

	WHERE  shift 74
	.  reduce 93 (src line 304)

	select_where_expressions  goto 75

state 59
	select_item_list:  select_item_list ',' select_item.    (80)

	.  reduce 80 (src line 280)


state 60
	select_item:  sql_id '(' select_item.')' 
	select_item:  sql_id '(' select_item.',' num_literal ')' 

	','  shift 77
	')'  shift 76
	.  error


state 61
	create_statement:  CREATE TABLE sql_id '(' table_column_list.')' 
	table_column_list:  table_column_list.',' column_definition 

	','  shift 79
	')'  shift 78
	.  error


state 62
	table_column_list:  column_definition.    (12)

	.  reduce 12 (src line 135)


state 63
	column_definition:  sql_id.column_type TAG 
	column_definition:  sql_id.column_type TAG NOT NULL 
	column_definition:  sql_id.column_type TAG DEFAULT literal 
	column_definition:  sql_id.column_type VALUE 
	column_definition:  sql_id.column_type VALUE NOT NULL 
	column_definition:  sql_id.column_type VALUE DEFAULT literal 

	BOOL  shift 82
	STRING  shift 96
	FLOAT  shift 95
	DOUBLE  shift 94
	BOOLEAN  shift 83
	BIT  shift 81
	TINYINT  shift 84
	SMALLINT  shift 85
	INT  shift 86
	INTEGER  shift 87
	BIGINT  shift 88
	UTINYINT  shift 89
	USMALLINT  shift 90
	UINT  shift 91
	UBIGINT  shift 92
	REAL  shift 93
	.  error

	column_type  goto 80

state 64
	create_statement:  CREATE TABLE IF NOT EXISTS.sql_id '(' table_column_list ')' 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 97
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 65
	insert_statement:  INSERT INTO sql_id VALUES insert_data.    (55)
	insert_data:  insert_data.',' '(' literal_list ')' 

	','  shift 98
	.  reduce 55 (src line 214)


state 66
	insert_data:  '('.literal_list ')' 

	STRING_NUM  shift 103
	INTEGER_NUM  shift 104
	FLOAT_NUM  shift 105
	TRUE_NUM  shift 106
	FALSE_NUM  shift 107
	.  error

	literal_list  goto 99
	literal  goto 100
	num_literal  goto 102
	string_literal  goto 101

state 67
	insert_statement:  INSERT INTO sql_id '*' VALUES.insert_data 

	'('  shift 66
	.  error

	insert_data  goto 108

state 68
	insert_statement:  INSERT INTO sql_id '(' sql_id_columns.')' VALUES insert_data 
	sql_id_columns:  sql_id_columns.',' sql_id 

	','  shift 110
	')'  shift 109
	.  error


state 69
	sql_id_columns:  sql_id.    (58)

	.  reduce 58 (src line 219)


state 70
	delete_statement:  DELETE FROM sql_id WHERE delete_where_expression.    (67)
	delete_where_expression:  delete_where_expression.AND delete_where_item 
	delete_where_expression:  delete_where_expression.OR delete_where_item 

	OR  shift 112
	AND  shift 111
	.  reduce 67 (src line 237)


state 71
	delete_where_expression:  delete_where_item.    (68)

	.  reduce 68 (src line 239)


state 72
	delete_where_item:  sql_id.IN '(' literal_list ')' 
	delete_where_item:  sql_id.NOT IN '(' literal_list ')' 
	delete_where_item:  sql_id.'=' literal 
	delete_where_item:  sql_id.NE literal 
	delete_where_item:  sql_id.LIKE string_literal 
	delete_where_item:  sql_id.NOT LIKE string_literal 

	NOT  shift 114
	'='  shift 115
	NE  shift 116
	LIKE  shift 117
	IN  shift 113
	.  error


state 73
	select_statement:  SELECT '*' FROM sql_id select_where_expressions.group_by_expression order_by_expression limit_expression 
	group_by_expression: .    (90)

	GROUP  shift 119
	.  reduce 90 (src line 299)

	group_by_expression  goto 118

state 74
	select_where_expressions:  WHERE.select_where_expression 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	sql_id  goto 123
	non_reserved_keyword  goto 27
	id_or_var  goto 26
	select_where_expression  goto 120
	select_where_time_expression  goto 121
	select_where_other_expression  goto 122

state 75
	select_statement:  SELECT select_item_list FROM sql_id select_where_expressions.group_by_expression order_by_expression limit_expression 
	group_by_expression: .    (90)

	GROUP  shift 119
	.  reduce 90 (src line 299)

	group_by_expression  goto 124

state 76
	select_item:  sql_id '(' select_item ')'.    (81)

	.  reduce 81 (src line 282)


state 77
	select_item:  sql_id '(' select_item ','.num_literal ')' 

	INTEGER_NUM  shift 104
	FLOAT_NUM  shift 105
	TRUE_NUM  shift 106
	FALSE_NUM  shift 107
	.  error

	num_literal  goto 125

state 78
	create_statement:  CREATE TABLE sql_id '(' table_column_list ')'.    (10)

	.  reduce 10 (src line 122)


state 79
	table_column_list:  table_column_list ','.column_definition 

	BOOL  shift 29
	DOUBLE  shift 31
	BOOLEAN  shift 30
	STRING_NUM  shift 32
	INTEGER_NUM  shift 33
	FLOAT_NUM  shift 34
	DECIMAL_NUM  shift 35
	TRUE_NUM  shift 36
	FALSE_NUM  shift 37
	ID  shift 28
	.  error

	column_definition  goto 126
	sql_id  goto 63
	non_reserved_keyword  goto 27
	id_or_var  goto 26

state 80
	column_definition:  sql_id column_type.TAG 
	column_definition:  sql_id column_type.TAG NOT NULL 
	column_definition:  sql_id column_type.TAG DEFAULT literal 
	column_definition:  sql_id column_type.VALUE 
	column_definition:  sql_id column_type.VALUE NOT NULL 
	column_definition:  sql_id column_type.VALUE DEFAULT literal 

	TAG  shift 127
	VALUE  shift 128
	.  error


state 81
	column_type:  BIT.    (20)

	.  reduce 20 (src line 165)


state 82
	column_type:  BOOL.    (21)

	.  reduce 21 (src line 167)


state 83
	column_type:  BOOLEAN.    (22)
